2008-11-26  higepon  <higepon@users.sourceforge.jp>

        * tools/psyntax-r6rs/rev10_to_10/psyntax/internal.ss (psyntax): Tuning.

        * Added: tiny clos.

2008-11-26  kokosabu  <kokosabu@gmail.com>

        * Implemented All of procedures defined in R6RS lib 11.2 Fixnums.

2008-11-25  higepon  <higepon@users.sourceforge.jp>

        * Flonum.h : Fixed dereferencing type-punned pointer will break strict-aliasing rules.

        * lib/core/r5rs.scm: Added R5RS comppatible procedures.

        * Passed all of base tests of R6RS test suite.

        * VM.cpp (run): Fixed the bug when continuation is called without argument.

        * Added: COMPILE_ERROR instruction for error detection of letrec.

2008-11-25  kokosabu  <kokosabu@gmail.com>

        * Added : fxbit-count, fxlength, fxfirst-bit-set, fxbit-set?, fxcopy-bit, fxbit-field,
                  fxcopy-bit-field, fxarithmetic-shift, fxarithmetic-shift-left, fxarithmetic-shift-right,
                  fxrotate-bit-field, fxreverse-bit-field.

        * Fixed : fx-.

2008-11-24  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (pass1/letrec): Added uninitialized value detection.

        * Fixed error procedure.

        * Fixed integer->char bug.

        * Added string-copy and string-for-each.

        * Fixnum.cpp (Fixnum::integerDiv): Fixed the bug.
                                           The result of integerDiv can be Bignum,
                                           So use Bignum::makeInteger().

        * Fixed (/ 0.000 0) => +inf.0.

        * Fixed (sqrt -5).

        * NumberReader.y (naninf): Fixed imag-part of +inf.

        * Fixed : string=? for arguments length >= 3.

        * Improved : write and display of compound-condition and record.

        * Added symbol=?, boolean=?.

2008-11-23  higepon  <higepon@users.sourceforge.jp>

        * Fixed 1e10 style read for decimal.

        * lib/mosh/condition.ss : Added &no-nans and &no-infinities.
